# macmatic

./: Cargo.toml  LICENSE  README.md  crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
.github/workflows/: docs.yaml
assets/: macmatic.preview.480.6fps.mov
doc/: all.html  index.html  sidebar-items.js  struct.Bot.html  struct.Bounds.html  struct.Rect.html  struct.Window.html  struct.WindowList.html
doc/error/: enum.ErrorKind.html  index.html  struct.Error.html
examples/: preview.rs
implementors/core/clone/: trait.Clone.js
implementors/core/convert/: trait.From.js
implementors/core/error/: trait.Error.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
src/: error.rs  lib.rs
src/macmatic/: error.rs.html  lib.rs.html
