[package]
name = "macmatic"
version = "0.1.0"
edition = "2021"
authors = ["Germain Masse"]
description = "A macOS automation framework with image detection, keyboard and mouse control"

[dependencies]
log = "0.4.20"
core-graphics = "0.23.1"
core-foundation = "0.9.3"
core-graphics-types = "0.1.2"
objc-foundation = "0.1.1"
objc_id = "0.1.1"
opencv = { version = "0.84.5", default-features = false, features = ["imgcodecs", "imgproc"]}
regex = "1.10.0"
enigo = "0.1.3"

[dev-dependencies]
env_logger = "0.10.0"
clap = "4.4.6"
